package com.rolex.alphax.behavioral.command;

/**
 * <P>
 *
 * </p>
 *
 * @author rolex
 * @since 2021
 */
public interface Command {
    void execute();
}
