package com.rolex.alphax.behavioral.command;

/**
 * <P>
 *
 * </p>
 *
 * @author rolex
 * @since 2021
 */
public class Cook {
    public void make(String food){
        System.out.println("厨师做" + food);
    }
}
